<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/background_gradient"
        tools:context=".PaymentActivity">

        <ImageView
            android:id="@+id/payment_method"
            android:layout_width="130dp"
            android:layout_height="131dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/coins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:fontFamily="@font/mm"
            android:text="@string/checkout"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            app:layout_constraintBottom_toBottomOf="@+id/check_payment_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001" />


        <LinearLayout
            android:id="@+id/payment_form_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_method"
            app:layout_constraintVertical_bias="0.050000012">

            <org.angmarch.views.NiceSpinner
                android:id="@+id/nice_spinner"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_margin="0dp"
                android:fontFamily="@font/mm"
                android:layout_marginBottom="10sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="#ffffff"
                android:fontFamily="@font/mm"
                android:drawableEnd="@drawable/ic_dialpad_black_24dp"
                android:drawableTint="#063793"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:paddingStart="10sp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/voucherCode"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginBottom="20sp"
                android:background="#ffffff"
                android:drawableEnd="@drawable/ic_dialpad_black_24dp"
                android:drawableTint="#063793"
                android:hint="@string/voucher_code"
                android:fontFamily="@font/mm"
                android:inputType="number"
                android:visibility="invisible"
                android:paddingStart="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/proceed"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:fontFamily="@font/mm"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_button_payment"
                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:padding="10sp"
                android:text="@string/proceed"
                android:textColor="#ffffff"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/check_payment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="vertical">


            <TextView
                android:id="@+id/confirmation_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:fontFamily="@font/mm"
                android:padding="10sp"
                android:text="@string/mtn_confirmation_txt"
                android:textSize="16sp" />


            <Button
                android:id="@+id/confirm_payout"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:layout_margin="8sp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_button_payment"                android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
                android:gravity="center"
                android:fontFamily="@font/mm"
                android:padding="10sp"
                android:text="@string/confirm"
                android:textColor="#ffffff" />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/advert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>